; ModuleID = '/home/carl/AnghaBench/lede/scripts/config/extr_menu.c_menu_get_prompt.c'
source_filename = "/home/carl/AnghaBench/lede/scripts/config/extr_menu.c_menu_get_prompt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.menu = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i8* }
%struct.TYPE_3__ = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @menu_get_prompt(%struct.menu* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.menu*, align 8
  store %struct.menu* %0, %struct.menu** %3, align 8
  %4 = load %struct.menu*, %struct.menu** %3, align 8
  %5 = getelementptr inbounds %struct.menu, %struct.menu* %4, i32 0, i32 1
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = icmp ne %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.menu*, %struct.menu** %3, align 8
  %10 = getelementptr inbounds %struct.menu, %struct.menu* %9, i32 0, i32 1
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  store i8* %13, i8** %2, align 8
  br label %27

14:                                               ; preds = %1
  %15 = load %struct.menu*, %struct.menu** %3, align 8
  %16 = getelementptr inbounds %struct.menu, %struct.menu* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = icmp ne %struct.TYPE_4__* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %14
  %20 = load %struct.menu*, %struct.menu** %3, align 8
  %21 = getelementptr inbounds %struct.menu, %struct.menu* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  store i8* %24, i8** %2, align 8
  br label %27

25:                                               ; preds = %14
  br label %26

26:                                               ; preds = %25
  store i8* null, i8** %2, align 8
  br label %27

27:                                               ; preds = %26, %19, %8
  %28 = load i8*, i8** %2, align 8
  ret i8* %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
